<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Login Page -->
    <string name="app_name">kasi_food_hub2</string>
    <string name="lbl_kasi_food_hub">KASI FOOD HUB</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_login">Please Log In</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_create_account">CREATE ACCOUNT</string>
    <string name="lbl_forgot_passwpord">FORGOT PASSWORD?</string>
    <string name="title_activity_registration">RegistrationActivity</string>

    <!-- Registration Page -->
    <string name="lbl_register">Registration</string>
    <string name="hint_entername">Enter name</string>
    <string name="hint_entersurname">Enter surname</string>
    <string name="hint_entercontact">Enter Contact Number</string>
    <string name="hint_enteraddress">Enter Address</string>
    <string name="btn_next">Next</string>
    <string name="title_activity_confirm_reg">ConfirmRegActivity</string>

    <!-- Confirm Registration Page -->
    <string name="lbl_confirm_register">Registration</string>
    <string name="hint_enteremailaddress">Enter Email Address</string>
    <string name="hint_regpassword">Password</string>
    <string name="hint_reenter_regpassword">Re-Enter Password</string>
    <string name="btn_finish">Finish</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>

    <!-- Forgot Password Page -->
    <string name="hint_forgot_enteremailaddress">Enter Email Address</string>
    <string name="btn_forgotnext">Next</string>
    <string name="title_activity_set_new_password">SetNewPasswordActivity</string>

    <!-- Set New Password Page -->
    <string name="hint_set_newpassword">New Password</string>
    <string name="hint_confirm_newpassword">Confirm Password</string>
    <string name="btn_set_newpassword">CHANGE PASSWORD</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    
    <!-- Home Page -->
    

</resources>
