<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kasi_food_hub2.RegistrationActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/lbl_register" />
   
    
    <EditText 
       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_entername"
        android:inputType="text" 
        />
    
    <EditText 
       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_entersurname" 
        android:inputType="text"
        />
    
    <EditText 
       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_entercontact"
        android:inputType="text" 
        />
    
    <EditText 
       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enteraddress"
        android:inputType="text" 
        />
    
    <Button
        android:id="@+id/btnNext" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_next"
        />

</LinearLayout>
