<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kasi_food_hub2.SetNewPasswordActivity" >

    <EditText 
       	android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:hint="@string/hint_set_newpassword"/>

    <EditText 
       	android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:hint="@string/hint_confirm_newpassword"/>
    
    <Button 
        android:id="@+id/btn_changepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/btn_set_newpassword"/>
    
</LinearLayout>
